🧹 chore(root): refactor again, enabled pre & post npm script hooks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,7 +30,7 @@
       "label": "npm: test",
       "isBackground": true,
       "dependsOn": ["npm: build"],
-      "detail": "vitest -r test/core --api",
+      "detail": "vitest",
       "problemMatcher": {
         "owner": "typescript",
         "fileLocation": "relative",
