--- a/scripts/package.json
+++ b/scripts/package.json
@@ -35,6 +35,7 @@
     "@pnpm/config": "^20.4.0",
     "cpy": "^11.0.0",
     "execa": "^8.0.1",
+    "fast-glob": "^3.3.2",
     "find-up": "^7.0.0",
     "gittar": "^0.1.1",
     "is-in-ci": "^0.1.0",
