--- a/scripts/package.json
+++ b/scripts/package.json
@@ -59,6 +59,7 @@
     "@types/yargs-parser": "^21.0.3",
     "create-next-app": "^14.0.4",
     "del": "^7.1.0",
+    "giget": "^1.2.1",
     "tsx": "^4.7.0",
     "type-coverage-core": "^2.27.1"
   }
