chore: refactored lots of things

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           name: size-data
-          path: temp/size-prev
+          path: artifacts/temp/size-prev
           if_no_artifact_found: warn
 
       - name: Size Report
@@ -76,13 +76,13 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: size-data
-          path: temp/size
+          path: artifacts/temp/size
 
       - name: Read Size Report
         id: size-report
         uses: juliangruber/read-file-action@v1
         with:
-          path: ./size-report.md
+          path: ./artifacts/size-report.md
 
       - name: Create commit comment
         uses: peter-evans/commit-comment@v2
