--- a/scripts/package.json
+++ b/scripts/package.json
@@ -20,14 +20,14 @@
     "npm": ">=8"
   },
   "scripts": {
-    "all": "node --import tsx/esm ./src/all.ts",
-    "clean": "node --import tsx/esm ./src/clean.ts",
-    "ci:copy:env": "node --import tsx/esm ./src/ci/copy-env.ts",
-    "ci:check:dist": "node --import tsx/esm ./src/ci/check-dist.ts",
-    "ci:delete:env": "node --import tsx/esm ./src/ci/delete-env.ts",
-    "create:stack": "node --import tsx/esm ./src/create/index.ts",
-    "lint": "node --import tsx/esm ./src/lint/index.ts",
-    "size:report": "node --import tsx/esm ./src/size/report.ts"
+    "all": "tsx ./src/all.ts",
+    "clean": "tsx ./src/clean.ts",
+    "ci:copy:env": "tsx ./src/ci/copy-env.ts",
+    "ci:check:dist": "tsx ./src/ci/check-dist.ts",
+    "ci:delete:env": "tsx ./src/ci/delete-env.ts",
+    "create:stack": "tsx ./src/create/index.ts",
+    "lint": "tsx ./src/lint/index.ts",
+    "size:report": "tsx ./src/size/report.ts"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
@@ -47,15 +47,15 @@
     "marked-terminal": "^6.2.0",
     "nypm": "^0.3.4",
     "picocolors": "^1.0.0",
-    "rollup": "^4.9.4",
+    "rollup": "^4.9.5",
     "tablemark": "^3.0.0",
     "terser": "^5.26.0",
     "totalist": "^3.0.1",
     "type-coverage-core": "^2.27.1",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
-    "yargs-parser": "^21.1.1",
-    "zx": "^7.2.3"
+    "wrap-ansi": "^9.0.0",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
