--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,12 +8,9 @@
     "davidanson.vscode-markdownlint",
     "eamodio.gitlens",
     "editorconfig.editorconfig",
-    "esbenp.prettier-vscode",
     "folke.vscode-monorepo-workspace",
-    "mintlify.document",
     "ms-vscode-remote.remote-containers",
     "redhat.vscode-yaml",
-    "zixuanchen.vitest-explorer",
-    "streetsidesoftware.code-spell-checker"
+    "zixuanchen.vitest-explorer"
   ]
 }
