--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -41,8 +41,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.1",
-    "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
-  }
+  },
+  "size-limit": "1.3 KB"
 }
