--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,8 +35,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.1",
-    "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
-  }
+  },
+  "size-limit": "100 B"
 }
