--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -34,13 +34,12 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "ora": "^7.0.1",
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.1",
-    "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
-  }
+  },
+  "size-limit": "2 KB"
 }
