--- a/scripts/package.json
+++ b/scripts/package.json
@@ -20,18 +20,19 @@
     "npm": ">=8"
   },
   "scripts": {
-    "all": "tsx ./src/all.ts",
+    "setup": "tsx ./src/setup.ts",
     "clean": "tsx ./src/clean.ts",
     "ci:copy:env": "tsx ./src/ci/copy-env.ts",
     "ci:check:dist": "tsx ./src/ci/check-dist.ts",
     "ci:delete:env": "tsx ./src/ci/delete-env.ts",
     "create": "tsx ./src/create/index.ts",
     "lint": "tsx ./src/lint/index.ts",
-    "size:report": "tsx ./src/size/report.ts"
+    "size:limit": "tsx ./src/size/limit.ts",
+    "size:report": "tsx ./src/size/report.ts",
+    "type:coverage": "tsx ./src/lint/type-cov.ts"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "@pnpm/config": "^20.4.1",
     "create-next-app": "^14.0.4",
     "dot-prop": "^8.0.2",
     "execa": "^8.0.1",
@@ -40,17 +41,13 @@
     "is-in-ci": "^0.1.0",
     "latest-version": "^7.0.0",
     "magic-regexp": "^0.7.0",
-    "markdown-table": "^3.0.3",
-    "markdownlint": "^0.33.0",
-    "marked": "^11.1.1",
     "nypm": "^0.3.4",
     "picocolors": "^1.0.0",
     "rollup": "^4.9.5",
-    "tablemark": "^3.0.0",
+    "table": "^6.8.1",
     "terser": "^5.26.0",
     "totalist": "^3.0.1",
     "type-coverage-core": "^2.27.1",
-    "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
     "wrap-ansi": "^9.0.0",
     "yargs-parser": "^21.1.1"
