--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -33,9 +33,9 @@
     "build": "tsup",
     "test": "vitest run"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^20.11.1",
+    "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
   },
