--- a/scripts/package.json
+++ b/scripts/package.json
@@ -32,10 +32,10 @@
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "@pnpm/config": "^20.4.1",
+    "@templ/utils": "workspace:*",
     "create-next-app": "^14.0.4",
     "dot-prop": "^8.0.2",
     "execa": "^8.0.1",
-    "find-up": "^7.0.0",
     "giget": "^1.2.1",
     "is-in-ci": "^0.1.0",
     "latest-version": "^7.0.0",
@@ -52,11 +52,10 @@
     "type-coverage-core": "^2.27.1",
     "type-fest": "^4.9.0",
     "typescript": "^5.3.3",
-    "wrap-ansi": "^9.0.0",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.1",
+    "@types/node": "^20.11.4",
     "@types/yargs-parser": "^21.0.3",
     "tsx": "^4.7.0"
   }
