🔨 refactor(none): refactor-17 refactored scripts, bring knip & turbo (#198)
* 🔨 refactor(none): refactor-17 refactored scripts, bring knip & turbo

* 🐛 fix(scripts): refactor-17 bring back deleted ci:check:dist file

* 🐛 fix(packages): refactor-17 unit testing issue for v8 package missing

* 🤖 ci(none): refactor-17 drop node20 for unit testing

--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -34,7 +34,6 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "ora": "^7.0.1",
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
@@ -42,5 +41,6 @@
     "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
-  }
+  },
+  "size-limit": "2 KB"
 }
