--- a/scripts/package.json
+++ b/scripts/package.json
@@ -34,7 +34,6 @@
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "@pnpm/config": "^20.4.1",
-    "@templ/utils": "workspace:*",
     "create-next-app": "^14.0.4",
     "del": "^7.1.0",
     "dot-prop": "^8.0.2",
@@ -43,7 +42,6 @@
     "globby": "^14.0.0",
     "is-in-ci": "^0.1.0",
     "latest-version": "^7.0.0",
-    "magic-regexp": "^0.7.0",
     "nypm": "^0.3.4",
     "picocolors": "^1.0.0",
     "rollup": "^4.9.5",
@@ -51,6 +49,7 @@
     "terser": "^5.26.0",
     "type-coverage-core": "^2.27.1",
     "typescript": "^5.3.3",
+    "wrap-ansi": "^9.0.0",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
