--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,18 +35,14 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
-    "test": "vitest run",
-    "test:cli": "pnpm link . && pnpm templjs -v"
+    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node"
   },
   "dependencies": {
     "sade": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.4",
-    "@vitest/coverage-v8": "^1.2.0",
-    "tsup": "^8.0.1",
-    "vitest": "^1.2.0"
+    "tsup": "^8.0.1"
   },
   "size-limit": "400 KB"
 }
