🔨 refactor(none): refactor-18 reolace @clack/prompts log to consola

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
           pnpm run -C scripts ci:env-copy
           pnpm run build
           pnpm run -C scripts ci:env-delete
-          pnpm run -C scripts ci:dist-check
+          pnpm run -C scripts dist-check
 
   test:
     runs-on: ${{ matrix.os }}
