🧹 chore(none): refactor-18 turbo pipeline and npm script changed

--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "bench": "turbo run bench",
     "changelog": "auto-changelog -p",
     "clean": "turbo run clean",
-    "commit": "turbo run commit && better-commits",
-    "create": "pnpm run -C scripts create --stack",
+    "commit": "pnpm run deps:update && turbo run commit && pnpm run changelog && better-commits",
     "eslint": "eslint -c eslint.config.js --color --cache --fix --cache-location .eslintcache .",
     "deps:update": "taze -r -w -i -f -l",
-    "lint": "turbo run lint",
+    "lint": "turbo run lint && pnpm run knip",
     "knip": "knip --include files,dependencies --reporter markdown",
     "setup": "turbo run setup",
     "test": "turbo run test"
