refactor: entire application refactored (#200)
* 🐛 fix(none): tinybench added as benchmark tools

* chore: better commit added benchmark

* 🧹 chore(none): refactor-18 fresh installed

* 🐛 fix(scripts): refactor-18 for ci build due to deps @templ/utils

* 🤖 ci(none): refactor-18 typo size report command

* 🧹 chore(packages): refactor-18 cli testing dropped

* 🧹 chore(packages): refactor-18 cli post build added

* 🔨 refactor(none): refactor-18 reolace @clack/prompts log to consola

* 🧹 chore(none): refactor-18 turbo pipeline and npm script changed

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
     "ghcr.io/devcontainers/features/docker-in-docker": "latest"
   },
   "onCreateCommand": "pnpm i --no-frozen-lockfile",
-  "postAttachCommand": "pnpm build",
+  "postAttachCommand": "pnpm run build",
   "waitFor": "onCreateCommand",
   "customizations": {
     "vscode": {
