--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -38,9 +38,10 @@ body:
       label: Used Package Manager
       description: Select the used package manager
       options:
-        - npm
-        - yarn
-        - pnpm
+        - bun
+          - npm
+          - yarn
+          - pnpm
     validations:
       required: true
   - type: checkboxes
