--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,19 +35,16 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup",
-    "pretest": "pnpm run build",
-    "test": "pnpm build && vitest run",
-    "test:cli": "pnpm build && pnpm link . && pnpm templjs -v"
+    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
+    "postbuild": "pnpm link . && pnpm templjs -v"
   },
   "dependencies": {
+    "consola": "^3.2.3",
     "sade": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.1",
-    "@vitest/coverage-v8": "^1.2.0",
-    "tsup": "^8.0.1",
-    "vitest": "^1.2.0"
+    "@types/node": "^20.11.5",
+    "tsup": "^8.0.1"
   },
   "size-limit": "400 KB"
 }
