--- a/templates/basic-ts/package.json
+++ b/templates/basic-ts/package.json
@@ -31,12 +31,13 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup",
-    "test": "pnpm build && vitest run"
+    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
+    "test": "vitest run"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^20.11.1",
+    "@types/node": "^20.11.5",
+    "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^7.3.0",
     "vitest": "^1.2.0"
   }
