--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -30,7 +30,7 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
     "test": "vitest run"
   },
   "dependencies": {
@@ -40,7 +40,7 @@
     "valibot": "^0.25.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.1",
+    "@types/node": "^20.11.5",
     "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
