--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,11 +30,11 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
     "test": "vitest run"
   },
   "devDependencies": {
-    "@types/node": "^20.11.1",
+    "@types/node": "^20.11.5",
     "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
