--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -30,14 +30,18 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
     "test": "vitest run"
   },
+  "dependencies": {
+    "find-up": "^7.0.0",
+    "wrap-ansi": "^9.0.0"
+  },
   "devDependencies": {
-    "@types/node": "^20.11.1",
+    "@types/node": "^20.11.5",
     "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "vitest": "^1.2.0"
   },
-  "size-limit": "800 B"
+  "size-limit": "2 KB"
 }
