--- a/scripts/package.json
+++ b/scripts/package.json
@@ -20,40 +20,39 @@
     "npm": ">=8"
   },
   "scripts": {
-    "setup": "tsx ./src/setup.ts",
-    "clean": "tsx ./src/clean.ts",
-    "ci:copy:env": "tsx ./src/ci/copy-env.ts",
-    "ci:check:dist": "tsx ./src/ci/check-dist.ts",
-    "ci:delete:env": "tsx ./src/ci/delete-env.ts",
+    "clean": "pnpm run clean:others && pnpm run clean:turbo",
+    "clean:others": "tsx ./src/clean/others.ts",
+    "clean:turbo": "tsx ./src/clean/turbo.ts",
+    "ci:env-copy": "tsx ./src/ci/env-copy.ts",
+    "ci:env-delete": "tsx ./src/ci/env-delete.ts",
+    "dist-check": "tsx ./src/dist-check.ts",
     "create": "tsx ./src/create/index.ts",
-    "lint": "tsx ./src/lint/index.ts",
-    "size:limit": "tsx ./src/size/limit.ts",
-    "size:report": "tsx ./src/size/report.ts",
-    "type:coverage": "tsx ./src/lint/type-cov.ts"
+    "lint:size-limit": "tsx ./src/lint/size-limit.ts",
+    "lint:size-report": "tsx ./src/lint/size-report.ts",
+    "lint:type-cov": "tsx ./src/lint/type-cov.ts"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "consola": "^3.2.3",
     "create-next-app": "^14.0.4",
+    "del": "^7.1.0",
     "dot-prop": "^8.0.2",
     "execa": "^8.0.1",
-    "find-up": "^7.0.0",
     "giget": "^1.2.1",
-    "is-in-ci": "^0.1.0",
+    "globby": "^14.0.0",
     "latest-version": "^7.0.0",
-    "magic-regexp": "^0.7.0",
     "nypm": "^0.3.4",
     "picocolors": "^1.0.0",
     "rollup": "^4.9.5",
     "table": "^6.8.1",
     "terser": "^5.26.0",
-    "totalist": "^3.0.1",
     "type-coverage-core": "^2.27.1",
     "typescript": "^5.3.3",
     "wrap-ansi": "^9.0.0",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.1",
+    "@types/node": "^20.11.5",
     "@types/yargs-parser": "^21.0.3",
     "tsx": "^4.7.0"
   }
