--- a/templates/basic-js/package.json
+++ b/templates/basic-js/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^20.11.1",
+    "@types/node": "^20.11.5",
+    "@vitest/coverage-v8": "^1.2.0",
     "vitest": "^1.2.0"
   }
 }
