--- a/turbo.json
+++ b/turbo.json
@@ -2,22 +2,30 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["@templ/scripts#clean", "^build"],
-      "outputs": ["dist/**", "!.next/cache/**"]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"],
+      "inputs": ["src/**/*.ts"]
     },
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "bench"],
       "outputs": ["coverage/**"],
       "inputs": ["src/**/*.ts", "test/**/*.ts"]
     },
-    "test:cli": {
-      "dependsOn": ["@templ/cli#build"]
-    },
     "lint": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["build", "eslint", "lint:size-limit", "lint:size-report", "lint:type-cov"],
+      "cache": false
     },
     "commit": {
-      "dependsOn": ["deps:update", "^build", "lint", "changelog"]
+      "dependsOn": ["build", "lint"],
+      "cache": false
+    },
+    "bench": {
+      "dependsOn": ["^build"],
+      "cache": false
+    },
+    "setup": {
+      "dependsOn": ["commit", "test"],
+      "cache": false
     },
     "clean": {
       "cache": false
@@ -26,10 +34,16 @@
       "cache": false,
       "persistent": true
     },
-    "changelog": {
+    "eslint": {
       "cache": false
     },
-    "deps:update": {
+    "lint:size-limit": {
+      "cache": false
+    },
+    "lint:size-report": {
+      "cache": false
+    },
+    "lint:type-cov": {
       "cache": false
     }
   }
