--- a/scripts/package.json
+++ b/scripts/package.json
@@ -26,15 +26,14 @@
     "ci:env-copy": "tsx ./src/ci/env-copy.ts",
     "ci:env-delete": "tsx ./src/ci/env-delete.ts",
     "dist-check": "tsx ./src/dist-check.ts",
-    "create": "tsx ./src/create/index.ts",
+    "create:stack": "tsx ./src/create/stack.ts",
     "lint:size-limit": "tsx ./src/lint/size-limit.ts",
     "lint:size-report": "tsx ./src/lint/size-report.ts",
     "lint:type-cov": "tsx ./src/lint/type-cov.ts"
   },
   "dependencies": {
-    "@clack/prompts": "^0.7.0",
     "consola": "^3.2.3",
-    "create-next-app": "^14.0.4",
+    "create-next-app": "^14.1.0",
     "del": "^7.1.0",
     "dot-prop": "^8.0.2",
     "execa": "^8.0.1",
@@ -42,18 +41,14 @@
     "globby": "^14.0.0",
     "latest-version": "^7.0.0",
     "nypm": "^0.3.4",
-    "picocolors": "^1.0.0",
     "rollup": "^4.9.5",
     "table": "^6.8.1",
-    "terser": "^5.26.0",
+    "terser": "^5.27.0",
     "type-coverage-core": "^2.27.1",
-    "typescript": "^5.3.3",
-    "wrap-ansi": "^9.0.0",
-    "yargs-parser": "^21.1.1"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
-    "@types/yargs-parser": "^21.0.3",
     "tsx": "^4.7.0"
   }
 }
