--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,7 @@
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
         "ms-vscode-remote.remote-containers",
+        "rangav.vscode-thunder-client",
         "redhat.vscode-yaml",
         "zixuanchen.vitest-explorer",
         "streetsidesoftware.code-spell-checker"
