--- a/tools/create/package.json
+++ b/tools/create/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@templ/server",
+  "name": "@templ/tools/create",
   "type": "module",
   "version": "0.0.0",
   "private": true,
   "packageManager": "pnpm@8.14.2",
-  "description": "TEMPL server",
+  "description": "TEMPL create tools",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/server#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/tools/create#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/templ.git",
-    "directory": "apps/server"
+    "directory": "tools/create"
   },
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
@@ -24,20 +24,17 @@
     "npm": ">=8"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "test": "vitest run"
+    "app": "tsx ./src/app.ts",
+    "doc": "tsx ./src/doc.ts",
+    "pkg": "tsx ./src/pkg.ts"
   },
   "dependencies": {
-    "@hono/node-server": "^1.4.1",
-    "@hono/zod-openapi": "^0.9.5",
-    "@scalar/hono-api-reference": "^0.3.23",
     "consola": "^3.2.3",
-    "hono": "^3.12.6"
+    "giget": "^1.2.1",
+    "latest-version": "^7.0.0",
+    "nypm": "^0.3.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "pactum": "^3.6.0",
-    "tsx": "^4.7.0",
-    "vitest": "^1.2.1"
+    "@types/node": "^20.11.5"
   }
 }
