🔨 refactor(none): refactor-19 main fn changed with run

--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "yarn": ">=3"
   },
   "scripts": {
-    "prebuild": "pnpm run clean",
+    "prebuild": "pnpm run clean && taze -r -w -i -f -l",
     "build": "turbo run build",
     "postbuild": "pnpm run -C scripts check",
     "bench": "turbo run bench",
     "changelog": "auto-changelog -p",
     "clean": "turbo run clean",
-    "commit": "pnpm run deps:update && turbo run commit && pnpm run changelog && better-commits",
+    "commit": "turbo run commit && pnpm run changelog && better-commits",
     "eslint": "eslint -c eslint.config.js --color --cache --fix --cache-location .eslintcache .",
-    "deps:update": "taze -r -w -i -f -l",
     "lint": "turbo run lint && pnpm run knip",
-    "knip": "knip --include files,dependencies --reporter markdown",
+    "knip": "knip --include files,dependencies",
     "setup": "turbo run setup",
     "test": "turbo run test"
   },
@@ -41,12 +40,7 @@
     "scripts",
     "tools/**"
   ],
-  "dependencies": {
-    "consola": "^3.2.3",
-    "giget": "^1.2.1",
-    "latest-version": "^7.0.0",
-    "nypm": "^0.3.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@antfu/eslint-config": "2.6.3",
     "auto-changelog": "^2.4.0",
