--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
+    "dev": "tsx src/index.ts",
     "postbuild": "pnpm link . && pnpm templjs -v"
   },
   "dependencies": {
@@ -44,7 +45,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
-    "tsup": "^8.0.1"
+    "tsup": "^8.0.1",
+    "tsx": "^4.7.0"
   },
   "size-limit": "400 KB"
 }
